--- a/style.css
+++ b/style.css
@@ -1,9 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+* {
+    box-sizing: border-box;
+}
+
 .foto-perfil {
     width: 200px;
     height: 200px;
     border-radius: 100%;
 }
 
+.menu {
+    color: #FFB800;
+    margin: 46px;
+    height: 24px;
+}
+
+.menu2 {
+    color: #FFB800;
+    text-decoration: none;
+    font-family: 'Permanent Marker', cursive;
+}
+
 body {
     text-align: center;
+    background-color: black;
+}
+
+h1 {
+    color: #FFB800;
+    font-family: 'Permanent Marker', cursive;
+}
+
+p {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
