--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 * {
     margin: 0 auto;
     padding: 0;
@@ -9,6 +10,21 @@
     width: 200px;
     height: 200px;
     border-radius: 100%;
+    position: relative;
+    top: 80px;
+}
+
+h1 {
+    color: #FFB800;
+    font-family: 'Permanent Marker', cursive;
+    position: relative;
+    top: 80px;
+}
+
+.sub-titulo {
+    position: relative;
+    top: 80px;
+    font-family: 'Permanent Marker', cursive;
 }
 
 #menu-horizontal ul {
@@ -33,6 +49,20 @@
     color: #9e8b5a;
 }
 
+#menu-vertical ul {
+    padding: 15px;
+    list-style: none;
+    text-align: left;
+    position: relative;
+    bottom: 100px;
+}
+
+#menu-vertical ul li {
+    display: block;
+    padding: 15px;
+    text-align: left;
+}
+
 .container {
     margin: 10px 20px;
     text-align: center;
@@ -42,9 +72,15 @@ body {
     background-color: black;
 }
 
-h1 {
+.sobre {
+    margin: 50px;
+    position: relative;
+    top: 60px;
+}
+
+h2 {
     color: #FFB800;
-    font-family: 'Permanent Marker', cursive;
+    text-align: center;
 }
 
 p {
