--- a/style.css
+++ b/style.css
@@ -27,10 +27,22 @@ h1 {
     color: white;
 }
 
+.avatar {
+    width: 60px;
+    height: 60px;
+    border-radius: 100px;
+    position: relative;
+    left: 20px;
+    padding: 10px;
+    margin: 10px;
+}
+
 #menu-horizontal ul {
     padding: 0;
     list-style: none;
     text-align: right;
+    position: relative;
+    bottom: 80px;
 }
 
 #menu-horizontal ul li {
