--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ h1 {
     font-family: 'Permanent Marker', cursive;
     position: relative;
     top: 80px;
+    width: 300px;
+    font-size: 30px;
 }
 
 .sub-titulo {
@@ -25,6 +27,7 @@ h1 {
     top: 90px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: white;
+    width: 200px;
 }
 
 
@@ -77,30 +80,52 @@ h1 {
 }
 
 .container {
-    margin: 10px 20px;
+    /* margin: 10px 20px; */
     text-align: center;
+    margin-bottom: 8px;
 }
 
 body {
     background-color: black;
 }
 
-.sobre {
+.titulo1 {
+    position: relative;
+    bottom: 30px;
+}
+
+.sobre-habilidades {
+    display: flex;
     margin: 0;
     background-color: #252525;
     padding: 60px;
 }
 
-h2 {
+.titulo1 {
     color: #FFB800;
     text-align: center;
     font-family: 'Permanent Marker', cursive;
     padding: 20px;
+    font-size: 20px;
+}
+
+#titulo2 {
+    color: #FFB800;
+    text-align: center;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 20px;
+    margin: 20px;
+    position: relative;
+    bottom: 10px;
 }
 
 .texto-sobre {
     color: white;
+    font-size: 12px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding: 20px;
-    text-align: center;
+    position: relative;
+    bottom: 20px;
+    text-align: justify;
+    width: 200px;
+    height: 300px;
 }
