--- a/style.css
+++ b/style.css
@@ -101,6 +101,11 @@ body {
     padding: 60px;
 }
 
+.habilidades {
+    position: relative;
+    right: 20px;
+}
+
 .titulo1 {
     color: #FFB800;
     text-align: center;
