--- a/style.css
+++ b/style.css
@@ -5,42 +5,6 @@
     box-sizing: border-box;
 }
 
-.foto-perfil {
-    width: 200px;
-    height: 200px;
-    border-radius: 100%;
-    position: relative;
-    top: 80px;
-}
-
-h1 {
-    color: #FFB800;
-    font-family: 'Permanent Marker', cursive;
-    position: relative;
-    top: 80px;
-    width: 300px;
-    font-size: 30px;
-}
-
-.sub-titulo {
-    position: relative;
-    top: 90px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: white;
-    width: 200px;
-}
-
-
-/* .avatar {
-    width: 60px;
-    height: 60px;
-    border-radius: 100px;
-    position: relative;
-    left: 20px;
-    padding: 10px;
-    margin: 10px;
-} */
-
 #menu-horizontal ul {
     padding: 0;
     list-style: none;
@@ -65,12 +29,39 @@ h1 {
     color: #9e8b5a;
 }
 
+.foto-perfil {
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    position: relative;
+    top: 80px;
+}
+
+h1 {
+    color: #FFB800;
+    font-family: 'Permanent Marker', cursive;
+    position: relative;
+    top: 80px;
+    width: 300px;
+    font-size: 30px;
+}
+
+.sub-titulo {
+    position: relative;
+    top: 90px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: white;
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
+}
+
 #menu-vertical ul {
     padding: 15px;
     list-style: none;
     text-align: left;
     position: relative;
-    bottom: 100px;
+    bottom: 150px;
 }
 
 #menu-vertical ul li {
@@ -83,27 +74,48 @@ h1 {
     /* margin: 10px 20px; */
     text-align: center;
     margin-bottom: 8px;
+    height: 500px;
 }
 
 body {
     background-color: black;
 }
 
-.titulo1 {
+
+/* .titulo1 {
     position: relative;
     bottom: 30px;
-}
+} */
 
-.sobre-habilidades {
-    display: flex;
+.sobre {
     margin: 0;
     background-color: #252525;
     padding: 20px;
 }
 
-.habilidades {
+#titulo {
+    color: #FFB800;
+    font-family: 'Permanent Marker', cursive;
     position: relative;
-    right: 20px;
+    width: 300px;
+    font-size: 30px;
+    text-align: center;
+    font-size: 30px;
+}
+
+p {
+    color: white;
+    font-size: 15px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    position: relative;
+    top: 30px;
+    text-align: center;
+    height: 300px;
+    width: 400px;
+}
+
+.habilidades {
+    height: 300px;
 }
 
 .titulo1 {
@@ -111,26 +123,11 @@ body {
     text-align: center;
     font-family: 'Permanent Marker', cursive;
     padding: 20px;
-    font-size: 20px;
+    font-size: 30px;
 }
 
-#titulo2 {
-    color: #FFB800;
+.img-habilidades {
     text-align: center;
-    font-family: 'Permanent Marker', cursive;
-    font-size: 20px;
-    margin: 20px;
     position: relative;
-    bottom: 10px;
-}
-
-.texto-sobre {
-    color: white;
-    font-size: 12px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    position: relative;
-    bottom: 20px;
-    text-align: justify;
-    width: 200px;
-    height: 300px;
+    top: 30px;
 }
